Basic html layout added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,100 @@
 		<div class="experience">
 			<canvas class="experience-canvas"></canvas>
 		</div>
+		//for smooth scrolling
+		<div class="page">
+			<div class="page-wrapper">
+				<section class="hero">
+					<div class="hero-wrapper">
+						<div class="hero-main">
+							<h1 class="hero-main-title">Chirag Aggarwal</h1>
+							<p class="hero-main-description">Btech Student.</p>
+						</div>
+
+						<div class="hero-second">
+							<p class="hero-second-subheading">Chirag Aggarwal</p>
+							<p class="hero-second-subheading">Portfolio</p>
+						</div>
+					</div>
+				</section>
+
+				<div class="section-margin"></div>
+
+				<section class="first-section section left">
+					<div class="section-intro-wrapper">
+						<h1 class="section-title">
+							<span class="section-title-text">About Me</span>
+							<div class="section-title-decoration styleOne"></div>
+							<div class="section-title-decoration styleTwo"></div>
+							<div class="section-title-decoration styleThree"></div>
+						</h1>
+						<span class="section-number">01</span>
+					</div>
+
+					<div class="section-detail-wrapper">
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+					</div>
+				</section>
+
+				<div class="section-margin"></div>
+
+				<section class="second-section section right">
+					<div class="section-intro-wrapper">
+						<h1 class="section-title">
+							<span class="section-title-text">My Work</span>
+							<div class="section-title-decoration styleOne"></div>
+							<div class="section-title-decoration styleTwo"></div>
+							<div class="section-title-decoration styleThree"></div>
+						</h1>
+						<span class="section-number">02</span>
+					</div>
+
+					<div class="section-detail-wrapper">
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+					</div>
+				</section>
+			</div>
+		</div>
 		<script type="module" src="/main.js"></script>
 	</body>
 </html>
