--- a/index.html
+++ b/index.html
@@ -4,14 +4,33 @@
 		<meta charset="UTF-8" />
 		<link rel="icon" type="image/svg+xml" href="/vite.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite App</title>
+		<title>Chirag Portfolio</title>
 	</head>
 	<body>
 		<div class="experience">
 			<canvas class="experience-canvas"></canvas>
 		</div>
-		//for smooth scrolling
+		<!-- for smooth scrolling -->
 		<div class="page">
+			<div class="toggle-bar">
+				<div class="sun-wrapper">
+					<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+						<path
+							d="M11.25 5.2V1.525h1.5V5.2Zm6.075 2.525L16.3 6.7l2.575-2.65 1.05 1.075ZM18.8 12.75v-1.5h3.675v1.5Zm-7.55 9.725V18.8h1.5v3.675ZM6.7 7.7 4.05 5.125l1.075-1.05 2.625 2.6Zm12.15 12.25L16.3 17.3l1-1 2.625 2.55Zm-17.325-7.2v-1.5H5.2v1.5Zm3.6 7.2-1.05-1.075L6.65 16.3l.55.5.55.525ZM12 17.5q-2.3 0-3.9-1.6T6.5 12q0-2.3 1.6-3.9T12 6.5q2.3 0 3.9 1.6t1.6 3.9q0 2.3-1.6 3.9T12 17.5Zm0-1.5q1.65 0 2.825-1.175Q16 13.65 16 12q0-1.65-1.175-2.825Q13.65 8 12 8q-1.65 0-2.825 1.175Q8 10.35 8 12q0 1.65 1.175 2.825Q10.35 16 12 16Zm0-4Z"
+						/>
+					</svg>
+				</div>
+				<button class="toggle-button">
+					<div class="toggle-circle"></div>
+				</button>
+				<div class="moon-wrapper">
+					<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+						<path
+							d="M12.025 20.5q-3.55 0-6.025-2.475Q3.525 15.55 3.525 12q0-3.4 2.3-5.825 2.3-2.425 5.65-2.625.2 0 .413.012.212.013.412.038-.775.725-1.225 1.737-.45 1.013-.45 2.163 0 2.45 1.725 4.175 1.725 1.725 4.175 1.725 1.175 0 2.175-.45 1-.45 1.7-1.225.05.2.063.412.012.213.012.413-.2 3.35-2.625 5.65-2.425 2.3-5.825 2.3Zm0-1.5q2.2 0 3.95-1.212 1.75-1.213 2.55-3.163-.5.125-1 .2-.5.075-1 .075-3.075 0-5.237-2.162Q9.125 10.575 9.125 7.5q0-.5.075-1t.2-1q-1.95.8-3.162 2.55Q5.025 9.8 5.025 12q0 2.9 2.05 4.95Q9.125 19 12.025 19Zm-.25-6.75Z"
+						/>
+					</svg>
+				</div>
+			</div>
 			<div class="page-wrapper">
 				<section class="hero">
 					<div class="hero-wrapper">
