rectlight width changed

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Chirag Portfolio</title>
 	</head>
-	<body>
+	<body class="light-theme">
 		<div class="experience">
 			<canvas class="experience-canvas"></canvas>
 		</div>
@@ -16,6 +16,7 @@
 				<div class="sun-wrapper">
 					<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
 						<path
+							fill="currentColor"
 							d="M11.25 5.2V1.525h1.5V5.2Zm6.075 2.525L16.3 6.7l2.575-2.65 1.05 1.075ZM18.8 12.75v-1.5h3.675v1.5Zm-7.55 9.725V18.8h1.5v3.675ZM6.7 7.7 4.05 5.125l1.075-1.05 2.625 2.6Zm12.15 12.25L16.3 17.3l1-1 2.625 2.55Zm-17.325-7.2v-1.5H5.2v1.5Zm3.6 7.2-1.05-1.075L6.65 16.3l.55.5.55.525ZM12 17.5q-2.3 0-3.9-1.6T6.5 12q0-2.3 1.6-3.9T12 6.5q2.3 0 3.9 1.6t1.6 3.9q0 2.3-1.6 3.9T12 17.5Zm0-1.5q1.65 0 2.825-1.175Q16 13.65 16 12q0-1.65-1.175-2.825Q13.65 8 12 8q-1.65 0-2.825 1.175Q8 10.35 8 12q0 1.65 1.175 2.825Q10.35 16 12 16Zm0-4Z"
 						/>
 					</svg>
@@ -26,6 +27,7 @@
 				<div class="moon-wrapper">
 					<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
 						<path
+							fill="currentColor"
 							d="M12.025 20.5q-3.55 0-6.025-2.475Q3.525 15.55 3.525 12q0-3.4 2.3-5.825 2.3-2.425 5.65-2.625.2 0 .413.012.212.013.412.038-.775.725-1.225 1.737-.45 1.013-.45 2.163 0 2.45 1.725 4.175 1.725 1.725 4.175 1.725 1.175 0 2.175-.45 1-.45 1.7-1.225.05.2.063.412.012.213.012.413-.2 3.35-2.625 5.65-2.425 2.3-5.825 2.3Zm0-1.5q2.2 0 3.95-1.212 1.75-1.213 2.55-3.163-.5.125-1 .2-.5.075-1 .075-3.075 0-5.237-2.162Q9.125 10.575 9.125 7.5q0-.5.075-1t.2-1q-1.95.8-3.162 2.55Q5.025 9.8 5.025 12q0 2.9 2.05 4.95Q9.125 19 12.025 19Zm-.25-6.75Z"
 						/>
 					</svg>
@@ -84,17 +86,59 @@
 					</div>
 				</section>
 
-				<div class="section-margin"></div>
+				<div class="second-move section-margin"></div>
 
-				<section class="second-section section right">
-					<div class="section-intro-wrapper">
-						<h1 class="section-title">
-							<span class="section-title-text">My Work</span>
-							<div class="section-title-decoration styleOne"></div>
-							<div class="section-title-decoration styleTwo"></div>
-							<div class="section-title-decoration styleThree"></div>
+				<section class="second-section section left">
+					<div class="section-intro-wrapper blue-text blue-border">
+						<h1 class="section-title blue-text blue-border">
+							<span class="section-title-text blue-text">My Work</span>
+							<div class="section-title-decoration styleOne blue-border"></div>
+							<div class="section-title-decoration styleTwo blue-border"></div>
+							<div
+								class="section-title-decoration styleThree blue-background blue-border"
+							></div>
 						</h1>
-						<span class="section-number">02</span>
+						<span class="section-number blue-text">02</span>
+					</div>
+
+					<div class="section-detail-wrapper">
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<p class="section-text">
+							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
+							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
+							odit sequi delectus!
+						</p>
+					</div>
+				</section>
+
+				<div class="third-move section-margin"></div>
+
+				<section class="third-section section left">
+					<div class="section-intro-wrapper green-text green-border">
+						<h1 class="section-title green-text green-border">
+							<span class="section-title-text green-text">Contact Me</span>
+							<div class="section-title-decoration styleOne green-border"></div>
+							<div class="section-title-decoration styleTwo green-border"></div>
+							<div
+								class="section-title-decoration styleThree green-background green-border"
+							></div>
+						</h1>
+						<span class="section-number green-text">03</span>
 					</div>
 
 					<div class="section-detail-wrapper">
