--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 				<div class="first-move section-margin"></div>
 
 				<section class="first-section section left">
+					<div class="progress-wrapper progress-bar-wrapper-left">
+						<div class="progress-bar"></div>
+					</div>
 					<div class="section-intro-wrapper">
 						<h1 class="section-title">
 							<span class="section-title-text">About Me</span>
@@ -88,7 +91,10 @@
 
 				<div class="second-move section-margin"></div>
 
-				<section class="second-section section left">
+				<section class="second-section section right">
+					<div class="progress-wrapper progress-bar-wrapper-right">
+						<div class="progress-bar blue-background"></div>
+					</div>
 					<div class="section-intro-wrapper blue-text blue-border">
 						<h1 class="section-title blue-text blue-border">
 							<span class="section-title-text blue-text">My Work</span>
@@ -129,6 +135,9 @@
 				<div class="third-move section-margin"></div>
 
 				<section class="third-section section left">
+					<div class="progress-wrapper progress-bar-wrapper-left">
+						<div class="progress-bar green-background"></div>
+					</div>
 					<div class="section-intro-wrapper green-text green-border">
 						<h1 class="section-title green-text green-border">
 							<span class="section-title-text green-text">Contact Me</span>
