asscroll added to page and button added for turning desktop on

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<canvas class="experience-canvas"></canvas>
 		</div>
 		<!-- for smooth scrolling -->
-		<div class="page">
+		<div class="page" asscroll-container>
 			<div class="toggle-bar">
 				<div class="sun-wrapper">
 					<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
@@ -33,7 +33,9 @@
 					</svg>
 				</div>
 			</div>
-			<div class="page-wrapper">
+
+			<div class="page-wrapper" asscroll>
+				<div class="desktop">Click me</div>
 				<section class="hero">
 					<div class="hero-wrapper">
 						<div class="hero-main">
