intro and preloader html,css added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,19 @@
 		<div class="experience">
 			<canvas class="experience-canvas"></canvas>
 		</div>
+
+		<!-- Preloading -->
+
+		<div class="preloader">
+			<div class="preloader-wrapper">
+				<div class="loading">
+					<div class="circle"></div>
+					<div class="circle"></div>
+					<div class="circle"></div>
+				</div>
+			</div>
+		</div>
+
 		<!-- for smooth scrolling -->
 		<div class="page" asscroll-container>
 			<div class="toggle-bar">
@@ -38,14 +51,23 @@
 				<div class="desktop">Click me</div>
 				<section class="hero">
 					<div class="hero-wrapper">
+						<div class="svg-wrapper">
+							<svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
+								<path
+									color="currentColor"
+									d="m12 15.375-6-6 1.4-1.4 4.6 4.6 4.6-4.6 1.4 1.4Z"
+								/>
+							</svg>
+						</div>
+						<div class="intro-text">Welcome to my portfolio!</div>
 						<div class="hero-main">
 							<h1 class="hero-main-title">Chirag Aggarwal</h1>
 							<p class="hero-main-description">Btech Student.</p>
 						</div>
 
 						<div class="hero-second">
-							<p class="hero-second-subheading">Chirag Aggarwal</p>
-							<p class="hero-second-subheading">Portfolio</p>
+							<p class="hero-second-subheading first-sub">Chirag Aggarwal</p>
+							<p class="hero-second-subheading second-sub">Portfolio</p>
 						</div>
 					</div>
 				</section>
