desktop turning on controller added to projects

--- a/index.html
+++ b/index.html
@@ -132,21 +132,21 @@
 					</div>
 
 					<div class="section-detail-wrapper">
-						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<h3 class="section-heading project">Timetable</h3>
 						<p class="section-text">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
 							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
 							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
 							odit sequi delectus!
 						</p>
-						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<h3 class="section-heading project">3D globe</h3>
 						<p class="section-text">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
 							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
 							hic aperiam. Unde dicta harum, quibusdam quod voluptatem numquam
 							odit sequi delectus!
 						</p>
-						<h3 class="section-heading">Lorem, ipsum.</h3>
+						<h3 class="section-heading project">Lorem, ipsum.</h3>
 						<p class="section-text">
 							Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
 							nemo nihil perspiciatis iure adipisci et doloribus debitis nisi
